# frankenstein_creator

./: Cargo.toml
src/: fetcher.rs  generator.rs  main.rs  parser.rs
test/support/: entity_table_example.html  function_table_example.html  table_with_entity_and_function_example.html
