[package]
name = "frankenstein_creator"
version = "0.1.0"
authors = ["Ayrat Badykov <ayratin555@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "1.1"
kuchiki = "0.8"
codegen = "0.1.3"
regex = { version = "1", features = ["pattern"] }